# sdl2-static-cmake

./: CMakeLists.txt  SDL_egl_grpcore0.c  sdl2-srcs.cmake
